# hope_Ai_model

./: .gitignore  AI설계서_v0.8.txt  HOPE_2026_수행계획서_v1.txt  README.md  이주석형님께 드리는 부탁.md
speech-coach/: .gitignore  README.md  pyproject.toml  requirements.txt
speech-coach/configs/data/: stage1_a.yaml  stage1_b.yaml  stage2.yaml
speech-coach/configs/model/: wav2vec2_base_xlsr.yaml
speech-coach/configs/train/: stage1.yaml  stage2.yaml
speech-coach/data/: manifest.example.jsonl
speech-coach/docker/: serve.Dockerfile  train.Dockerfile
speech-coach/scripts/: build_normal_distribution.py  deploy_dgx.sh  deploy_local.sh  eval_test.py  extract_hope_data.py  prepare_all_manifests.py  prepare_d1_kspon.py  prepare_d2_aihub_kid.py  prepare_d3_free_dialog.py  prepare_d4_kor_child.py  split_manifests.py  start_api.sh  train_stage1.py  train_stage2.py
speech-coach/src/speech_coach/: __init__.py
speech-coach/src/speech_coach/data/: __init__.py  augment.py  dataset.py  extract_archives.py  g2p_ko.py  hope_paths.py  ipa_vocab.py  manifest_build.py  prepare_d1.py  prepare_d2.py  prepare_d3.py  prepare_d4.py  prepare_stage1.py  split_manifest.py
speech-coach/src/speech_coach/eval/: __init__.py  metrics.py  normal_distribution.py
speech-coach/src/speech_coach/models/: __init__.py  aligner.py  feedback.py  forced_aligner.py  opensmile_analyzer.py  (+3 more)
speech-coach/tests/: test_aligner.py  test_api.py  test_audio_io.py  test_forced_aligner.py  test_g2p_ko.py  test_manifest_prepare.py  test_opensmile_analyzer.py  test_pcc.py  test_split_manifest.py  test_variation_classifier.py
(+31 files in other folders)
